--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -2,16 +2,87 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4616f1a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ac88fc74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16327 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_videogames = pd.read_csv('vgsales.csv')\n",
+    "\n",
+    "df_videogames.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56be267",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
