--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -279,8 +279,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d846aa0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank              0\n",
+       "Name              0\n",
+       "Platform          0\n",
+       "Year            271\n",
+       "Genre             0\n",
+       "Publisher        58\n",
+       "NA_Sales          0\n",
+       "EU_Sales          0\n",
+       "JP_Sales          0\n",
+       "Other_Sales       0\n",
+       "Global_Sales      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_videogames.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc790cc",
    "metadata": {},
    "outputs": [],
    "source": []
