--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -22,45 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ac88fc74",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 16598 entries, 0 to 16597\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   Rank          16598 non-null  int64  \n",
-      " 1   Name          16598 non-null  object \n",
-      " 2   Platform      16598 non-null  object \n",
-      " 3   Year          16327 non-null  float64\n",
-      " 4   Genre         16598 non-null  object \n",
-      " 5   Publisher     16540 non-null  object \n",
-      " 6   NA_Sales      16598 non-null  float64\n",
-      " 7   EU_Sales      16598 non-null  float64\n",
-      " 8   JP_Sales      16598 non-null  float64\n",
-      " 9   Other_Sales   16598 non-null  float64\n",
-      " 10  Global_Sales  16598 non-null  float64\n",
-      "dtypes: float64(6), int64(1), object(4)\n",
-      "memory usage: 1.4+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_videogames = pd.read_csv('vgsales.csv')\n",
-    "\n",
-    "df_videogames.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a56be267",
+   "execution_count": 6,
+   "id": "ffc790cc",
    "metadata": {},
    "outputs": [
     {
@@ -168,151 +131,41 @@
        "      <td>1.00</td>\n",
        "      <td>31.37</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Tetris</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>1989.0</td>\n",
-       "      <td>Puzzle</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>23.20</td>\n",
-       "      <td>2.26</td>\n",
-       "      <td>4.22</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>30.26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>New Super Mario Bros.</td>\n",
-       "      <td>DS</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>Platform</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>11.38</td>\n",
-       "      <td>9.23</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>2.90</td>\n",
-       "      <td>30.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Wii Play</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2006.0</td>\n",
-       "      <td>Misc</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>14.03</td>\n",
-       "      <td>9.20</td>\n",
-       "      <td>2.93</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>29.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>New Super Mario Bros. Wii</td>\n",
-       "      <td>Wii</td>\n",
-       "      <td>2009.0</td>\n",
-       "      <td>Platform</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>14.59</td>\n",
-       "      <td>7.06</td>\n",
-       "      <td>4.70</td>\n",
-       "      <td>2.26</td>\n",
-       "      <td>28.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Duck Hunt</td>\n",
-       "      <td>NES</td>\n",
-       "      <td>1984.0</td>\n",
-       "      <td>Shooter</td>\n",
-       "      <td>Nintendo</td>\n",
-       "      <td>26.93</td>\n",
-       "      <td>0.63</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.47</td>\n",
-       "      <td>28.31</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rank                       Name Platform    Year         Genre Publisher  \\\n",
-       "0     1                 Wii Sports      Wii  2006.0        Sports  Nintendo   \n",
-       "1     2          Super Mario Bros.      NES  1985.0      Platform  Nintendo   \n",
-       "2     3             Mario Kart Wii      Wii  2008.0        Racing  Nintendo   \n",
-       "3     4          Wii Sports Resort      Wii  2009.0        Sports  Nintendo   \n",
-       "4     5   Pokemon Red/Pokemon Blue       GB  1996.0  Role-Playing  Nintendo   \n",
-       "5     6                     Tetris       GB  1989.0        Puzzle  Nintendo   \n",
-       "6     7      New Super Mario Bros.       DS  2006.0      Platform  Nintendo   \n",
-       "7     8                   Wii Play      Wii  2006.0          Misc  Nintendo   \n",
-       "8     9  New Super Mario Bros. Wii      Wii  2009.0      Platform  Nintendo   \n",
-       "9    10                  Duck Hunt      NES  1984.0       Shooter  Nintendo   \n",
+       "   Rank                      Name Platform    Year         Genre Publisher  \\\n",
+       "0     1                Wii Sports      Wii  2006.0        Sports  Nintendo   \n",
+       "1     2         Super Mario Bros.      NES  1985.0      Platform  Nintendo   \n",
+       "2     3            Mario Kart Wii      Wii  2008.0        Racing  Nintendo   \n",
+       "3     4         Wii Sports Resort      Wii  2009.0        Sports  Nintendo   \n",
+       "4     5  Pokemon Red/Pokemon Blue       GB  1996.0  Role-Playing  Nintendo   \n",
        "\n",
        "   NA_Sales  EU_Sales  JP_Sales  Other_Sales  Global_Sales  \n",
        "0     41.49     29.02      3.77         8.46         82.74  \n",
        "1     29.08      3.58      6.81         0.77         40.24  \n",
        "2     15.85     12.88      3.79         3.31         35.82  \n",
        "3     15.75     11.01      3.28         2.96         33.00  \n",
-       "4     11.27      8.89     10.22         1.00         31.37  \n",
-       "5     23.20      2.26      4.22         0.58         30.26  \n",
-       "6     11.38      9.23      6.50         2.90         30.01  \n",
-       "7     14.03      9.20      2.93         2.85         29.02  \n",
-       "8     14.59      7.06      4.70         2.26         28.62  \n",
-       "9     26.93      0.63      0.28         0.47         28.31  "
+       "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_videogames.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d846aa0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Rank              0\n",
-       "Name              0\n",
-       "Platform          0\n",
-       "Year            271\n",
-       "Genre             0\n",
-       "Publisher        58\n",
-       "NA_Sales          0\n",
-       "EU_Sales          0\n",
-       "JP_Sales          0\n",
-       "Other_Sales       0\n",
-       "Global_Sales      0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_videogames.isna().sum()"
+    "df_videogames = pd.read_csv('vgsales.csv')\n",
+    "\n",
+    "df_videogames.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc790cc",
+   "id": "020c2169",
    "metadata": {},
    "outputs": [],
    "source": []
