--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e38a591",
+   "metadata": {},
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "## Ejercicio Practico Video Games Sales\n",
+    "        Poniendo en practica los emprendido en el curso se FreeCodeCamp \"Data Analysis with Python\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4616f1a7",
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ffc790cc",
    "metadata": {},
    "outputs": [
@@ -151,7 +161,7 @@
        "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,8 +174,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "020c2169",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16327 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_videogames.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "127c970b",
+   "metadata": {},
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "###  Hallazgos de inspección .info()\n",
+    "\n",
+    "-  Me dice que para las celdas Year y Publisher, cuentan con datos NaN, por lo que necesitare una estrategia para limpiarlos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "00613b8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16327.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8300.605254</td>\n",
+       "      <td>2006.406443</td>\n",
+       "      <td>0.264667</td>\n",
+       "      <td>0.146652</td>\n",
+       "      <td>0.077782</td>\n",
+       "      <td>0.048063</td>\n",
+       "      <td>0.537441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4791.853933</td>\n",
+       "      <td>5.828981</td>\n",
+       "      <td>0.816683</td>\n",
+       "      <td>0.505351</td>\n",
+       "      <td>0.309291</td>\n",
+       "      <td>0.188588</td>\n",
+       "      <td>1.555028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1980.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4151.250000</td>\n",
+       "      <td>2003.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.060000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8300.500000</td>\n",
+       "      <td>2007.000000</td>\n",
+       "      <td>0.080000</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>0.170000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12449.750000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>0.240000</td>\n",
+       "      <td>0.110000</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.470000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>16600.000000</td>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>41.490000</td>\n",
+       "      <td>29.020000</td>\n",
+       "      <td>10.220000</td>\n",
+       "      <td>10.570000</td>\n",
+       "      <td>82.740000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Rank          Year      NA_Sales      EU_Sales      JP_Sales  \\\n",
+       "count  16598.000000  16327.000000  16598.000000  16598.000000  16598.000000   \n",
+       "mean    8300.605254   2006.406443      0.264667      0.146652      0.077782   \n",
+       "std     4791.853933      5.828981      0.816683      0.505351      0.309291   \n",
+       "min        1.000000   1980.000000      0.000000      0.000000      0.000000   \n",
+       "25%     4151.250000   2003.000000      0.000000      0.000000      0.000000   \n",
+       "50%     8300.500000   2007.000000      0.080000      0.020000      0.000000   \n",
+       "75%    12449.750000   2010.000000      0.240000      0.110000      0.040000   \n",
+       "max    16600.000000   2020.000000     41.490000     29.020000     10.220000   \n",
+       "\n",
+       "        Other_Sales  Global_Sales  \n",
+       "count  16598.000000  16598.000000  \n",
+       "mean       0.048063      0.537441  \n",
+       "std        0.188588      1.555028  \n",
+       "min        0.000000      0.010000  \n",
+       "25%        0.000000      0.060000  \n",
+       "50%        0.010000      0.170000  \n",
+       "75%        0.040000      0.470000  \n",
+       "max       10.570000     82.740000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_videogames.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6086effe",
+   "metadata": {},
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "###  Hallazgos de inspección .describe()\n",
+    "\n",
+    "-  Me dice que para la celda Global_Sales, cuenta con una desviasion estandar de 1.555028 se presume alta, lo que sugiere presencia de outliers (juegos con ventas masivas que podrian sesgar el promedio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "80af837a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16598, 11)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_videogames.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1db27d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Rank', 'Name', 'Platform', 'Year', 'Genre', 'Publisher', 'NA_Sales',\n",
+       "       'EU_Sales', 'JP_Sales', 'Other_Sales', 'Global_Sales'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_videogames.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ac81fa84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank              int64\n",
+       "Name             object\n",
+       "Platform         object\n",
+       "Year            float64\n",
+       "Genre            object\n",
+       "Publisher        object\n",
+       "NA_Sales        float64\n",
+       "EU_Sales        float64\n",
+       "JP_Sales        float64\n",
+       "Other_Sales     float64\n",
+       "Global_Sales    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_videogames.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1bf825a",
    "metadata": {},
    "outputs": [],
    "source": []
