--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -215,7 +215,8 @@
     "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
     "###  Hallazgos de inspección .info()\n",
     "\n",
-    "-  Me dice que para las celdas Year y Publisher, cuentan con datos NaN, por lo que necesitare una estrategia para limpiarlos"
+    "-  Me dice que para la celdas Year, cuenta con datos NaN, por lo que necesitare una estrategia para limpiarlos y quiza por eso Panda lo toma como un dato float64 cuando deberia ser int64.\n",
+    "-  Me dice que para la celdas Publisher, cuenta con datos NaN, por lo que necesitare una estrategia para limpiarlos"
    ]
   },
   {
