Dia 2 'Sin modificaciones'

--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -1176,12 +1176,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cb686fc",
+   "cell_type": "markdown",
+   "id": "c3021fa3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)"
+   ]
   }
  ],
  "metadata": {
