--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 198,
    "id": "4616f1a7",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 199,
    "id": "ffc790cc",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "4     11.27      8.89     10.22         1.00         31.37  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 200,
    "id": "020c2169",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 201,
    "id": "00613b8d",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 202,
    "id": "80af837a",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
        "(16598, 11)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 203,
    "id": "1db27d23",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 204,
    "id": "ac81fa84",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 205,
    "id": "d267e5f2",
    "metadata": {},
    "outputs": [
@@ -511,7 +511,7 @@
        "'Nintendogs'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 206,
    "id": "061bc271",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 207,
    "id": "0d983460",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "10                 Nintendogs       DS         24.76"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 208,
    "id": "be8d0874",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 209,
    "id": "cb1ae8fe",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "16597          0.0          0.01  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 210,
    "id": "80b2dec5",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
        "16597                                  Spirits & Spells      GBA  2003.0"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 211,
    "id": "1e4de9ba",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1147,7 @@
        "[2346 rows x 11 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 212,
    "id": "36ed36c5",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1421,7 @@
        "[5145 rows x 11 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 213,
    "id": "9a3e6fe0",
    "metadata": {},
    "outputs": [
@@ -1675,7 +1675,7 @@
        "[1325 rows x 11 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 214,
    "id": "8c207ea8",
    "metadata": {},
    "outputs": [
@@ -1929,7 +1929,7 @@
        "21     10.83      2.71      4.18         0.42         18.14  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 215,
    "id": "626317a5",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2088,7 @@
        "47         11.66  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2101,7 +2101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 216,
    "id": "4b0e67d2",
    "metadata": {},
    "outputs": [
@@ -2122,7 +2122,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "id": "b2acac0d",
    "metadata": {},
    "outputs": [
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 218,
    "id": "059165c7",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 219,
    "id": "503141b0",
    "metadata": {},
    "outputs": [
@@ -2361,7 +2361,7 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 152,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2377,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 220,
    "id": "34e5c681",
    "metadata": {},
    "outputs": [
@@ -2415,12 +2415,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "93880ae1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "#### \n",
+    "**Dia 3** - *Aplicacion al proyecto*\n",
+    "\n",
+    "Tema del Día: Repasar y entender las diferentes estrategias para manejar los valores nulos (NaN). Con el objetivo de tomar decisiones informadas como analista sobre cómo limpiar nuestro dataset y justificar esas decisiones.\n",
+    "\n",
+    "Tarea:\n",
+    "\n",
+    "1.  Investiga las columnas Year y Publisher, que ya sabemos que tienen valores nulos.\n",
+    "\n",
+    "2.  Decide una estrategia de limpieza para CADA UNA de ellas. Por ejemplo: para Year, podrías decidir que eliminar las filas con año faltante es aceptable. Para Publisher, podrías decidir que es mejor rellenar los faltantes con la palabra \"Unknown\".\n",
+    "\n",
+    "3.  Ejecuta el código para aplicar estas estrategias a tu DataFrame principal df_videogames.\n",
+    "\n",
+    "4.  Justifica tus decisiones. En una celda de Markdown, escribe un breve párrafo explicando por qué elegiste cada estrategia.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "42769adc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16598 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_videogames['Year'] = df_videogames['Year'].fillna(median_year)\n",
+    "\n",
+    "df_videogames.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "814cdfd3",
+   "metadata": {},
+   "source": [
+    "Para la columna 'Year' se considero usar la mediana (2.007) de la columna ya que se asume que el año de lanzamientos de los video juegos es un estimativo importante en el df, tambien los valores faltante representaban el 1.6% de la base de datos los que no afectaria considerablemente los resultados, tambien se consudero su influencia en las ventas globales. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "9416db94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16598 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16598 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_videogames['Publisher'] = df_videogames['Publisher'].fillna('Unknown')\n",
+    "\n",
+    "df_videogames.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fc371a3",
+   "metadata": {},
+   "source": [
+    "Para la columana 'Publisher' se considero reemplazar los valores faltantes con 'Unknown' (desconocido) ya que estos tambien podrian tener influencia sobre las ventas globales a pesar de no representar mas del 0.35% de la base de datos."
+   ]
   }
  ],
  "metadata": {
