--- a/VideoGamesSales_Project.ipynb
+++ b/VideoGamesSales_Project.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6086effe",
+   "id": "0e7cefce",
    "metadata": {},
    "source": [
     "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
@@ -475,49 +475,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1805e6ca",
-   "metadata": {},
-   "source": [
-    "Tarea: \n",
-    "\n",
-    "¿Qué comando usarías para ver rápidamente el promedio y la mediana de todas las columnas de ventas?\n",
-    "\n",
-    "    -   usaria .mean() para el promedio y .median() para la mediana o simplemente usando .describe() ya que el 50% representa la mediana.\n",
-    "\n",
-    "¿Qué comando te diría exactamente cuántos valores no nulos hay en la columna Year?\n",
-    "\n",
-    "    -   Puedo tener esta informacion de 2 formas, .info() me dice cuantos valores Not Null existen en la fila y tambien podria usar \"df_videogames['Year'].notna().sum()\" de esta forma tendria el numero de valores no nulos. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a97c9ad",
+   "id": "4b23d04e",
    "metadata": {},
    "source": [
     "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
-    "#### Practica del dia 2\n",
-    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
-   "id": "d267e5f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Nintendogs'"
-      ]
-     },
-     "execution_count": 205,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_videogames['Name'].loc[10]"
+    "#### Practica del dia 2"
    ]
   },
   {
@@ -1175,7 +1137,7 @@
     "\n",
     "  3.  Crea un DataFrame final llamado hits_de_nintendo que cumpla dos condiciones a la vez:\n",
     "\n",
-    "        -  Que su Publisher sea \"Nintendo\". Y que sus ventas en Norteamérica (NA_Sales) sean mayores a 10 millones.\n"
+    "        -  Que su Publisher sea \"Nintendo\". Y que sus ventas en Norteamérica (NA_Sales) sean mayores a 10 millones."
    ]
   },
   {
@@ -1946,8 +1908,7 @@
    "metadata": {},
    "source": [
     "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
-    "#### Practica del dia 3\n",
-    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)"
+    "#### Practica del dia 3"
    ]
   },
   {
@@ -2524,6 +2485,34 @@
    "metadata": {},
    "source": [
     "Para la columana 'Publisher' se considero reemplazar los valores faltantes con 'Unknown' (desconocido) ya que estos tambien podrian tener influencia sobre las ventas globales a pesar de no representar mas del 0.35% de la base de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da2cdda",
+   "metadata": {},
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "#### \n",
+    "#### Practica del Dia 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea304bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "234886d1",
+   "metadata": {},
+   "source": [
+    "![green-divider](https://user-images.githubusercontent.com/7065401/52071924-c003ad80-2562-11e9-8297-1c6595f8a7ff.png)\n",
+    "#### \n",
+    "**Dia 4** - *Aplicacion al proyecto*"
    ]
   }
  ],
